Converted to use Prettier code formatting

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,8 +1,10 @@
-@import './_variables';
-@import './_spacings';
-@import './__mixins.scss';
+@import "./_variables";
+@import "./_spacings";
+@import "./__mixins.scss";
 
-html, body, #app {
+html,
+body,
+#app {
   height: 100%;
   margin: 0;
   padding: 0;
