--- a/src/components/PasswordHealth/components/Header/header-style.scss
+++ b/src/components/PasswordHealth/components/Header/header-style.scss
@@ -1,4 +1,4 @@
-@import '../../../../style/_variables';
+@import "../../../../style/_variables";
 
 .header {
   height: 160px;
@@ -11,7 +11,7 @@
 
   .user-section {
     top: 16px;
-    right: 32px;;
+    right: 32px;
     position: absolute;
 
     button {
