--- a/src/components/PasswordHealth/components/Filter/filter-style.scss
+++ b/src/components/PasswordHealth/components/Filter/filter-style.scss
@@ -1,5 +1,6 @@
 @import '../../../../style/_variables';
 
+// Tabs allowing user to filter passwords list
 .filter {
   display: flex;
   justify-content: center;
