--- a/src/components/PasswordHealth/components/List/list-style.scss
+++ b/src/components/PasswordHealth/components/List/list-style.scss
@@ -1,5 +1,6 @@
 @import '../../../../style/_variables';
 
+// List of password items
 .list {
   list-style: none;
   border-top: 2px solid $grey-light;
